# baby-monitor

./: .gitignore  Dockerfile  LICENSE  README.md  camera_server.py  data_validation.py  docker-compose.yml  index.html  main.py  predictions.db  pyproject.toml  requirements.txt  test_pipeline.py  verify_bigquery.py
baby_monitor_agent/: agent.py
baby_monitor_agent/.adk/: session.db
frontend/: index.html  package.json
frontend/src/: App.jsx
src/: microphone_capture.py
src/agent/: notes.txt
src/api/: db.py  server.py
src/cloud_function/: main.py
src/dashboard/: app.py
src/detection_service/: db.py  prediction.py  publisher.py
src/device/: audio_monitor.py  environment_monitor.py  publisher.py  start_services.py
src/device/model/checkpoints/: best_model.pt  checkpoint_epoch_10.pt
src/ingestion_pipeline/: dataflow.py
src/model/: train_model.py
src/model/checkpoints/: checkpoint_epoch_20.pt
